--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.26",
+    "axios": "^1.4.0",
+    "govuk-frontend": "^4.6.0",
+    "govuk-react": "^0.10.5",
     "next": "13.4.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-do": "^1.1.6",
+    "react-dom": "18.2.0",
+    "sass": "^1.62.1",
+    "styled-components": "^5.3.11"
   }
 }
