--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@react-navigation/native": "^6.1.6",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "govuk-frontend": "^4.6.0",
