--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.6",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "govuk-frontend": "^4.6.0",
     "govuk-react": "^0.10.5",
     "next": "13.4.3",
@@ -23,6 +24,7 @@
     "react": "18.2.0",
     "react-do": "^1.1.6",
     "react-dom": "18.2.0",
+    "react-scripts": "^5.0.1",
     "sass": "^1.62.1",
     "save": "^2.9.0",
     "styled-components": "^5.3.11"
