--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "(heroku config:pull -f .env) & next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
